--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -228,7 +228,7 @@ p {
 #linkabout {
          height:10px;
         margin-top: 79px;
-        margin-bottom:40px;
+        margin-bottom:42px;
 }
 .area01 {
     position:absolute;
@@ -262,10 +262,16 @@ p {
     display: block;
 }
 
-.bx-viewport {
+
+#about .bx-viewport {
     background-color: #fff;
     color:#000;
     margin-top:-25px;
+    margin-bottom:40px;
+}
+
+#about .bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto {
+    bottom:-40px;
 }
 
 
@@ -278,7 +284,7 @@ p {
     margin: 0 auto;
     float: left;
     padding: 10px 10px;
-    width: 55%;
+    width: 45%;
 }
 
 
@@ -289,9 +295,10 @@ p {
 }
 
 .profile_name {
+    font-family: 'Duru Sans', sans-serif;
     float: left;
     margin-left:130px;
-    padding-top: 150px;
+    padding-top: 100px;
     text-align: center;
     color: #000;
     font-size: 3em;
@@ -312,21 +319,27 @@ p {
 .profile_english {
     float: left;
     margin-top:0;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
      text-align: left;
          color: #000;
 }
 
-/* ここからschejule*/
+/* ここからschedule*/
+
+#linkschedule {
+        position:relative;
+top:-50px;
+}
+
 
 .area02 {
     width: 100%;
-    height:700px;
+    height: 700px;
     z-index: 2;
 }
 
 #top02 {
-    height:700px;
+    height: 700px;
     background-image:url("../images/djtablemono.jpg");
     background-size: cover;
     background-attachment:fixed;
@@ -340,37 +353,71 @@ p {
     text-align: center;
 }
 
-#schejule .bx-viewport {
+#schedule .bx-viewport {
     background:transparent;
+        height: 600px;
     z-index:1;
 }
 
-
 table {
-    padding: 0 100px 0 10px;
+    position:relative;
+    left:-20px;
+    width:100%;
+    padding: 0 100px 0 0;
+    font-size:1.2em;
+    tr {
+    height:50px;
 }
-#schejule .bx-wrapper {
-    height: 600px;
+  td {
+    width:33%;
+  }
 }
 
+#schedule .bx-wrapper {
+    height: 600px;
+    // & .tables {
+    //     height:100%;
+    // }
+}
+// .thead {
+//     vertical-align:baseline;
+// }
+
+  // /#schedule .bx-wrapper .tables {
+  //       height:100%;
+  //   }
 
 
 
 /* ここからnews*/
 
+.area03 {
+    background-color: #fff;
+    width: 100%;
+    height: 700px;
+    z-index: 2;
+}
+
 //
 
 
-// #news {
-//     background-color: #fff;
-//     background-image: url("../images/demo14.jpg");
-//     position:scroll;
-//     color:#000;
-//     text-align: center;
-//     margin: 0;
-//     // width: 90%;
-// }
-//
+#news {
+    margin-top: 79px;
+    background-color: #fff;
+    // background-image: url("../images/demo14.jpg");
+    // position:scroll;
+    color:#000;
+    text-align: center;
+    margin: 0;
+    // width: 90%;
+}
+
+#news h2 {
+    margin-top:0px;
+    margin-bottom:30px;
+    padding-top:20px;
+  color:#000;
+}
 
 p.news-text {
     color:#fff;
