--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -109,7 +109,7 @@ a {
     }
 }
 
-p {
+#about p {
     color: #000;
     padding:10px;
     padding-right: 100px;
@@ -160,27 +160,28 @@ p {
 .scroll {
 	margin-top:80px;
 	text-align: center;
-}
-.scroll a {
+     a {
 	padding-top: 30px;
+    span {
+    display:block;
+    position:relative;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb 2s infinite;
+    animation: sdb 2s infinite;
+    opacity: 0;
+    box-sizing: border-box;
 }
-.scroll a span {
-	display:block;
-	position:relative;
-	top: 0;
-	left: 50%;
-	width: 24px;
-	height: 24px;
-	margin-left: -12px;
-	border-left: 1px solid #fff;
-	border-bottom: 1px solid #fff;
-	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-	-webkit-animation: sdb 2s infinite;
-	animation: sdb 2s infinite;
-	opacity: 0;
-	box-sizing: border-box;
 }
+}
+
 .scroll a span:nth-of-type(1) {
 	-webkit-animation-delay: 0s;
 	animation-delay: 0s;
@@ -407,7 +408,6 @@ table {
     // background-image: url("../images/demo14.jpg");
     // position:scroll;
     color:#000;
-    text-align: center;
     margin: 0;
     // width: 90%;
 }
@@ -416,22 +416,130 @@ table {
     margin-top:0px;
     margin-bottom:30px;
     padding-top:20px;
+        text-align: center;
+
+  color:#000;
+}
+#news li {
+    width: 90%;
+    img {
+        width:30%;
+        height:30%;
+        float: right;
+        margin:30px;
+        padding-right: 40px;
+    }
+    .news-contents {
+        float: left;
+        text-align:left;
+        margin:10px;
+            }
+    .headlinedate
+    {
+        font-weight:bold;
+        font-size:1.2em;
+            }
+            .headlinetitle {
+                font-weight: bold;
+                font-size: 1.2em;
+                margin:10px;
+            }
+}
+#news p {
+    color:#000;
+    margin:0;
+
+// #wrapper {
+//     display: -webkit-flex;
+//     display: -moz-flex;
+//     display: -ms-flex;
+//     display: -o-flex;
+//     display: flex;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     align-content: flex-start;
+//     flex-basis: 300px;
+// }
+
+
+}
+//     img {
+//         float: right;
+//     }
+//     .news-contents{
+//             text-align:left;
+// float: left;
+// }
+// .news-headlinedate {
+
+// }
+// }
+
+
+.area04 {
+    width: 100%;
+    height: 1000px;
+    z-index: 2;
+}
+
+#top04 {
+    height: 1000px;
+    background-image:url("../images/headphone.jpg");
+    background-size: cover;
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
+    z-index: 1;
+}
+.area04 h2 {
+    margin-top: 0;
+    padding: 30px 0 30px;
+    text-align: center;
+}
+
+
+
+
+
+/* ここからcontact*/
+
+.area05 {
+    background-color: #fff;
+    width: 100%;
+    height: 700px;
+    z-index: 2;
+}
+
+//
+
+#contact {
+    margin-top: 79px;
+    background-color: #fff;
+    color:#000;
+    margin: 0;
+     background-image: url("../images/kansyumono.jpg");
+         background-repeat: no-repeat;
+    background-size: cover;
+    z-index:3;
+
+}
+
+#contact h2 {
+    margin-top:0px;
+    margin-bottom:0px;
+    padding-top:20px;
+        text-align: center;
+        background-color: #fff;
   color:#000;
 }
 
-p.news-text {
-    color:#fff;
-}
 
-.area05 {
-    width: 100%;
-    background-image: url("../images/kansyumono.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 5px;
-}
 
-/* ここからForm*/
+
+
+
+
+
 
 .form-group {
     width: 90%;
