--- a/html/css/style.css
+++ b/html/css/style.css
@@ -473,6 +473,7 @@ table td {
   margin-top: 79px;
   background-color: #fff;
   color: #000;
+  height: 700px;
   margin: 0;
   background-image: url("../images/kansyumono.jpg");
   background-repeat: no-repeat;
@@ -482,60 +483,37 @@ table td {
 
 #contact h2 {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   padding-top: 20px;
+  padding-bottom: 20px;
   text-align: center;
   background-color: #fff;
   color: #000;
 }
 
 .form-group {
-  width: 90%;
+  width: 80%;
   text-align: center;
   margin: 0 auto;
 }
 
 .form-control {
+  width: 100%;
   background-color: #000;
   margin: 10px auto;
   opacity: 0.7;
+}
+
+input[type="name"] {
+  height: 3em;
+}
+
+input[type="email"] {
+  height: 3em;
 }
 
 button {
   background-color: #bbbbbb;
   color: black;
   opacity: 0.7;
-}
-
-table {
-  border: 0;
-  width: 100%;
-}
-
-th {
-  border: 0;
-}
-
-thead {
-  font-weight: bold;
-  color: #fff;
-  background: rgba(0, 0, 0, 0.5);
-  width: 100%;
-}
-
-thead .date {
-  width: 20%;
-}
-
-thead .event {
-  width: 40%;
-}
-
-thead .venue {
-  width: 40%;
-}
-
-td {
-  color: #fff;
-  text-align: center;
 }
