--- a/html/css/style.css
+++ b/html/css/style.css
@@ -439,19 +439,21 @@ table td {
   margin: 0;
 }
 
+/* ここからmusic*/
 .area04 {
   width: 100%;
-  height: 1000px;
+  height: auto;
   z-index: 2;
 }
 
 #top04 {
-  height: 1000px;
+  height: auto;
   background-image: url("../images/headphone.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
+  padding-bottom: 5%;
   z-index: 1;
 }
 
@@ -461,31 +463,49 @@ table td {
   text-align: center;
 }
 
+iframe {
+  widows: 280px;
+  height: 210px;
+}
+
+.video, .audio {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+#music h3 {
+  text-align: center;
+  font-family: 'Duru Sans', sans-serif;
+}
+
 /* ここからcontact*/
 .area05 {
   background-color: #fff;
   width: 100%;
-  height: 700px;
+  height: auto;
   z-index: 2;
+  margin: 0% 0 0% 0;
 }
 
 #contact {
   margin-top: 79px;
-  background-color: #fff;
   color: #000;
-  height: 700px;
+  height: auto;
   margin: 0;
   background-image: url("../images/kansyumono.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 3;
+  padding-bottom: 0%;
 }
 
 #contact h2 {
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 3%;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 3%;
   text-align: center;
   background-color: #fff;
   color: #000;
@@ -500,11 +520,12 @@ table td {
 .form-control {
   width: 100%;
   background-color: #000;
-  margin: 10px auto;
+  margin: 5% auto;
   opacity: 0.7;
 }
 
 input[type="name"] {
+  margin-top: 10%;
   height: 3em;
 }
 
@@ -516,4 +537,32 @@ button {
   background-color: #bbbbbb;
   color: black;
   opacity: 0.7;
+  margin-bottom: 10%;
+}
+
+/* ここからfooter*/
+.linkimg {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  margin-top: 0;
+  background-color: #fff;
+  padding-bottom: 3%;
+}
+
+footer h2 {
+  color: #bbb;
+  text-align: center;
+  font-size: 0.8em;
+  margin-top: 0;
+  padding: 2% 0 2% 0;
+}
+
+footer img {
+  width: 10%;
+  height: 10%;
 }
