--- a/html/css/style.css
+++ b/html/css/style.css
@@ -42,18 +42,10 @@ header ul {
   padding-left: 0;
 }
 
-header ul:hover {
-  color: #000;
-}
-
 header ul li {
   list-style-type: none;
   display: inline-block;
   margin: 5px 30px;
-}
-
-header ul li:hover {
-  color: #000;
 }
 
 header ul li a {
@@ -61,7 +53,7 @@ header ul li a {
 }
 
 header ul li a:hover {
-  color: red;
+  color: #bbb;
 }
 
 #top {
@@ -239,83 +231,74 @@ a:hover {
 }
 
 .area01 {
-  position: absolute;
+  position: relative;
   width: 100%;
+  height: auto;
   left: 0;
   z-index: 1;
 }
 
 #about {
+  height: auto;
   background-color: #fff;
   color: #000;
   text-align: center;
   margin: 0;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 #about h2 {
   color: black;
-  font-weight: bold;
   margin: 0;
+  text-align: center;
 }
 
 .abouth2 {
-  margin-bottom: 0px;
-  background-color: #fff;
-  height: 60px;
-  text-align: center;
-  display: block;
+  margin-bottom: 0;
 }
 
 #about .bx-viewport {
+  width: auto;
+  height: auto;
   background-color: #fff;
   color: #000;
-  margin-top: -25px;
-  margin-bottom: 40px;
+  margin-bottom: 6%;
 }
 
 #about .bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto {
-  bottom: -40px;
-}
-
-.djs {
-  margin-top: 0px;
-  padding: 0 10px;
-}
-
-.djs img {
-  margin: 0 auto;
-  float: left;
-  padding: 10px 10px;
-  width: 45%;
+  bottom: -7%;
 }
 
 #profile {
-  margin-top: -20px;
-  line-height: 3.5em;
-  vertical-align: middle;
+  margin-top: 0;
+  padding-top: 5%;
+  padding-left: 1%;
+  padding-right: 10%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.djs img {
+  width: 55%;
+  height: 55%;
 }
 
 .profile_name {
   font-family: 'Duru Sans', sans-serif;
-  float: left;
-  margin-left: 130px;
-  padding-top: 100px;
+  font-size: 3em;
   text-align: center;
   color: #000;
-  font-size: 3em;
 }
 
 .djs-text {
-  margin-top: 0px;
+  margin-top: 0;
   float: left;
 }
 
 .profile_japanese {
   float: left;
   text-align: left;
-  margin-top: 5px;
   margin-bottom: 0;
   color: #000;
 }
@@ -323,7 +306,7 @@ a:hover {
 .profile_english {
   float: left;
   margin-top: 0;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   text-align: left;
   color: #000;
 }
@@ -336,12 +319,12 @@ a:hover {
 
 .area02 {
   width: 100%;
-  height: 700px;
+  height: auto;
   z-index: 2;
 }
 
 #top02 {
-  height: 700px;
+  height: auto;
   background-image: url("../images/djtablemono.jpg");
   background-size: cover;
   background-attachment: fixed;
@@ -352,26 +335,25 @@ a:hover {
 
 .area02 h2 {
   margin-top: 0;
-  padding: 30px 0 30px;
+  padding: 5% 0 5%;
   text-align: center;
 }
 
 #schedule .bx-viewport {
   background: transparent;
-  height: 600px;
+  height: auto;
   z-index: 1;
 }
 
 table {
   position: relative;
-  left: -20px;
   width: 100%;
   padding: 0 100px 0 0;
   font-size: 1.2em;
 }
 
 table tr {
-  height: 50px;
+  height: 20%;
 }
 
 table td {
@@ -386,12 +368,13 @@ table td {
 .area03 {
   background-color: #fff;
   width: 100%;
-  height: 700px;
+  height: auto;
   z-index: 2;
 }
 
 #news {
   margin-top: 79px;
+  height: auto;
   background-color: #fff;
   color: #000;
   margin: 0;
@@ -457,7 +440,8 @@ table td {
   z-index: 1;
 }
 
-.area04 h2 {
+#music h2 {
+  font-size: 2em;
   margin-top: 0;
   padding: 30px 0 30px;
   text-align: center;
@@ -502,9 +486,10 @@ iframe {
 }
 
 #contact h2 {
+  font-size: 2em;
   margin-top: 0px;
   margin-bottom: 3%;
-  padding-top: 20px;
+  padding-top: 3%;
   padding-bottom: 3%;
   text-align: center;
   background-color: #fff;
@@ -512,6 +497,7 @@ iframe {
 }
 
 .form-group {
+  color: #fff;
   width: 80%;
   text-align: center;
   margin: 0 auto;
@@ -525,12 +511,21 @@ iframe {
 }
 
 input[type="name"] {
+  color: #fff;
+  font-size: 1.2em;
+  height: 2em;
   margin-top: 10%;
-  height: 3em;
 }
 
 input[type="email"] {
-  height: 3em;
+  color: #fff;
+  font-size: 1.2em;
+  height: 2em;
+}
+
+textarea {
+  color: #fff;
+  font-size: 1.2em;
 }
 
 button {
