--- a/_resource/sass/style.scss
+++ b/_resource/sass/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
+
 body {
     font-family: '游ゴシック体', 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
-
     color: #ffffff;
     animation: fadeIn 2s ease 0s 1 normal;
     -webkit-animation: fadeIn 2s ease 0s 1 normal;
@@ -43,7 +43,7 @@ header {
      li {
         list-style-type: none;
         display: inline-block;
-        margin: 5px 30px;
+        margin: 5px 2.94%;
 
         a {
             color: #000;
@@ -71,18 +71,18 @@ header {
     background-color: #fff;
     z-index: -3;
 }
-
-
-/*
-#social-icons-top .social-header ul li {
-}*/
+@media screen and (max-width: 980px){
+ #top {
+ max-width:980px;
+ }
+}
 
 h1 {
     display:block;
     font-family: 'Megrim', cursive;
     color: rgba(255, 255, 255, 1);
-    font-size: 100px;
-    margin-top: 300px;
+    font-size: 6.1em;
+    margin-top: 29%;
     margin-bottom: 0;
     position: scroll;
     width: 100%;
@@ -97,11 +97,11 @@ h2 {
     font-size: 2em;
 }
 
-a {
+header a {
     text-decoration: none;
     color: #ffffff;
     &:hover {
-        color: #666666;
+        color: #666;
     }
 }
 
@@ -127,7 +127,7 @@ a {
             margin-top:10px;
                 text-align: center;
             &:hover {
-                border: red solid 1px;
+                border: #bbb solid 1px;
             }
 
         }
@@ -145,13 +145,11 @@ a {
     border: #fff solid 1px;
     border-radius: 3px;
 }
-.facebook-header :hover {
-     width: 32px;
-    height: 32px;
-    background-image: url("../images/icon2/twitter.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-}
+
+
+// .flex-item:nth-child(3) {
+//     align-self:flex-end;
+// }
 
 .scroll {
 	margin-top:80px;
@@ -229,8 +227,13 @@ a {
       height: auto;
     left:0;
     z-index:1;
+    background-color: #fff;
 }
 
+#about .bxslider {
+    width:100%;
+
+}
 
 #about {
     height: auto;
@@ -238,24 +241,16 @@ a {
     color:#000;
     text-align: center;
     margin: 0;
-    // margin-top: 20px;
     padding-top: 3%;
     padding-bottom: 3%;
 
-    // width: 90%;
 }
 #about h2{
     color: black;
     margin: 0;
         text-align: center;
 }
-.abouth2 {
-    margin-bottom:0;
-    // background-color: #fff;
-    // height:60px;
 
-    // display: block;
-}
 
 
 #about .bx-viewport {
@@ -271,38 +266,60 @@ a {
     bottom:-7%;
 }
 
-
 #profile {
+    // height:60%;
     margin-top: 0;
     // line-height: 3.5em;
     // padding-bottom:30%;
-  padding-top: 5%;
+  padding-top: 1%;
   padding-left: 1%;
   padding-right: 10%;
   display:flex;
   justify-content:space-between;
 }
+.profile_right {
+    width: 100%;
+    height: 100%;
+    // position: scroll;
+    ul {
+            text-align: center;
+            line-height: 1.5em;
+            margin-top: 25%;
+            padding-right: 10%;
+             li {
 
-// .djs {
-//     margin-top: 0;
-//     padding: 0 0;
-// }
+            list-style-type: none;
+            display: inline-block;
+            margin: 3px;
+            margin-top:1%;
+                text-align: center;
+            &:hover {
+                border: #666 solid 1px;
+            }
+             img {
+    background-size: cover;
+    width:32px;
+    height:32px;
+}
+}
+}
+}
+
+.profile_right .facebook-header, .profile_right .twitter-header, .profile_right .mixcloud-header{
+    border: #000 solid 1px;
+    border-radius: 3px;
+}
 
 .djs img {
-    // margin: 0 auto;
-    // float: left;
-    // padding: 0 0;
     width: 55%;
     height:55%;
 }
 
-.profile_name {
+.djs h4 {
     font-family: 'Duru Sans', sans-serif;
         font-size: 3em;
-    // float: left;
-    // margin-right:40%;
-    // padding-right: 10%;
-    text-align: center;
+        margin:0;
+    text-align:center;
     color: #000;
 }
 
@@ -349,25 +366,33 @@ top:-50px;
     background-position: center center;
     z-index: 1;
 }
-.area02 h2 {
+#schedule h2 {
     margin-top: 0;
     padding: 5% 0 5%;
     text-align: center;
 }
 
-#schedule .bx-viewport {
-    background:transparent;
-           height:auto;
-
-    z-index:1;
+#schedule .bx-wrapper {
+    height: auto;
 }
 
+#schedule .bx-viewport {
+overflow: visible !important;
+    background:transparent;
+           height:auto;
+           padding-bottom:1%;
+}
+
+li .tables {
+text-align: center;
+padding-bottom: 3%;
+}
 table {
-    position:relative;
     width:100%;
-    padding: 0 100px 0 0;
+    padding: 0 10% 0 0;
     font-size:1.2em;
     tr {
+        text-align: center;
     height:20%;
 }
   td {
@@ -375,20 +400,29 @@ table {
   }
 }
 
-#schedule .bx-wrapper {
-    height: 600px;
-
+#schedule p {
+    text-align: center;
+    background-color: rgba(0,0,30,.3);
+    padding:1%;
+        border: 1px solid #fff;
 }
-
-
+.futuretable {
+    margin-top: 0;
+}
+#schedule a {
+    text-decoration: none;
+    color: #ffffff;
+    &:hover {
+        color: #666;
+    }
+}
 
 /* ここからnews*/
 
 .area03 {
     background-color: #fff;
     width: 100%;
-        height:auto;
-
+    height:auto;
     z-index: 2;
 }
 
